# GSG

./: .gitignore  LICENSE  README.md
cynthion/: Cargo.toml  README.md  WORKAROUNDS.md  memory.x  requirements.txt
cynthion/cynthion/: Cargo.toml  Makefile  README.md
cynthion/cynthion/.cargo/: config.toml  flash.sh
cynthion/cynthion/scripts/: bulk_speed_test.py
cynthion/cynthion/src/: lib.rs  log.rs
cynthion/cynthion/src/class/: greatdancer.rs
cynthion/dcachedebug/: Cargo.toml  Makefile  README.md  asm-dcachedebug.S  asm-litex.S  asm.S  build.rs  link-bare.x  link-dcachedebug.x  link-litex.x  memory.x  sections.numbers
cynthion/dcachedebug/.cargo/: config.toml
cynthion/dcachedebug/scripts/: bulk_speed_test.py
cynthion/dcachedebug/src/: class.rs  lib.rs  panic_log.rs  rt.rs  rt_minimal.rs
cynthion/dcachedebug/src/class/: firmware.rs  moondancer.rs
cynthion/design/: Makefile  README.md  d2_ex.py  rfp.html
cynthion/design/dataflow/: luna.d2  top_dataflow.d2
cynthion/design/facedancer/: facedancer_git.backends_moondancer.d2  top_facedancer.d2
cynthion/design/greatfet/: top_greatfet.d2
cynthion/design/structure/: hardware.d2  luna_git.firmware.d2  luna_git.gateware_soc.d2  top_structure.d2
cynthion/design/usb/: top.py
cynthion/hello-bios/: bios_example.py
cynthion/hello-rust/: Cargo.toml  README.md  build.rs  link.x  memory.x
cynthion/hello-rust/.cargo/: config.toml  flash.sh
cynthion/hello-rust/src/: main.rs
cynthion/libgreat/src/: error.rs  gcp.rs
cynthion/libgreat/src/gcp/: class_core.rs
cynthion/lunasoc/: Makefile  lunasoc.py  sram.py  top.py  top_vexriscv.py  vexriscv.py  vexsoc.py
cynthion/lunasoc-hal/: Cargo.toml
cynthion/lunasoc-hal/src/: lib.rs  serial.rs  smolusb.rs  usb.rs
cynthion/lunasoc-hal/src/smolusb/: class.rs  control.rs  descriptor.rs  device.rs  traits.rs
cynthion/lunasoc-hal/src/smolusb/class/: cdc.rs  cynthion.rs  moondancer.rs
cynthion/lunasoc-pac/: Makefile
cynthion/lunasoc-pac/src/: generated.rs
cynthion/lunasoc-pac/svd/: lunasoc.svd
cynthion/lunasoc/generate/: genc.py  generate.py  gensvd.py
cynthion/lunasoc/peripheral/: __init__.py
cynthion/lunasoc/verilog/: README.md
cynthion/lunasoc/verilog/vexriscv/: vexriscv_cynthion.v  vexriscv_imac+dcache.v  vexriscv_imac.v
cynthion/moondancer/: Cargo.toml  Makefile  README.md
cynthion/moondancer-soc/: blinky_verilog.py  top.py  top_minerva.py  vexriscv.py  vexsoc.py
cynthion/moondancer-soc/generate/: introspect.py
cynthion/moondancer-soc/peripheral/: led.py
cynthion/moondancer-soc/verilog/vexriscv/: vexriscv_cynthion.v  vexriscv_imac+dcache.v  vexriscv_imac.v
cynthion/moondancer/src/: lib.rs  usb.rs
cynthion/moondancer/src/gcp/: firmware.rs  moondancer.rs
cynthion/posts/crowdsupply-moondancer/: MoonDancer.excalidraw  README.md  index.md
cynthion/smolusb/: Cargo.toml
cynthion/smolusb/src/: device.rs  traits.rs
cynthion/smolusb/src/class/: cdc.rs  moondancer.rs
luna/: Cargo.toml  README.md  memory.x
luna/cynthion/: Cargo.toml  README.md
luna/cynthion/.cargo/: config.toml  flash.sh
luna/cynthion/scripts/: bulk_in_speed_test.py
luna/cynthion/src/: error.rs  lib.rs  log.rs  panic_log.rs
luna/cynthion/src/class/: firmware.rs  greatdancer.rs
luna/design/: Makefile  README.md  dataflow.d2  rfp.html  rfp.md  structure.d2  watch.sh
luna/design/dataflow/: greatfet.d2  luna.d2
luna/design/facedancer/: facedancer_git.backends_moondancer.d2  facedancer_git.examples_rubber_ducky.d2  greatfet_git.host_greatfet.d2  libreat_git.pygreat.d2  top_facedancer.d2
luna/design/greatfet/: top_greatfet.d2
luna/design/structure/: libgreat-rs_git.d2  luna_git.examples_soc.d2  luna_git.firmware.d2  luna_git.gateware_soc.d2  top.d2
luna/hello-bios/: Makefile  bios_example.py
luna/hello-lunasoc/: Makefile  configure_ecp5.py  lunasoc.py  top.py
luna/hello-lunasoc/generate/: __init__.py  genc.py  generate.py  gensvd.py
luna/hello-rust/: Cargo.toml  link.x  memory.x
luna/hello-rust/.cargo/: flash.sh
luna/hello-rust/src/: main.rs
luna/libgreat/: Cargo.toml
luna/libgreat/src/: error.rs  firmware.rs  gcp.rs  lib.rs
luna/libgreat/src/gcp/: class.rs  class_core.rs
luna/libgreat/src/smolusb/: control.rs
luna/lunasoc/: Makefile  blinky.v  bootloader.py  gpio.py  lunasoc.py  top.py  top_vexriscv.py  vexriscv.py  vexsoc.py
luna/lunasoc-firmware/: Cargo.toml
luna/lunasoc-firmware/.cargo/: config.toml  flash.sh
luna/lunasoc-firmware/src/: csr.rs  error.rs  lib.rs  log.rs  minerva.rs  usb.rs
luna/lunasoc-firmware/src/usb/: control.rs  request.rs
luna/lunasoc-hal/: Cargo.toml  memory.x
luna/lunasoc-hal/.cargo/: config.toml  flash.sh
luna/lunasoc-hal/examples/: blinky.rs  blinky_pac.rs  interrupts.rs  uart.rs
luna/lunasoc-hal/src/: lib.rs  serial.rs  smolusb.rs  timer.rs  uart.rs  usb.rs
luna/lunasoc-hal/src/smolusb/: class.rs  control.rs  descriptor.rs  device.rs  error.rs  traits.rs
luna/lunasoc-hal/src/usb/: control.rs  error.rs
luna/lunasoc-pac/: Cargo.toml  Makefile  build.rs  device.x
luna/lunasoc-pac/.cargo/: config.toml  flash.sh
luna/lunasoc-pac/src/: cpu.rs  csr.rs  generated.rs  interrupt.rs  lib.rs  usb0_in_ep.rs  usb0_out_ep.rs  usb0_setup.rs
luna/lunasoc-pac/src/usb0/: connect.rs  speed.rs
luna/lunasoc-pac/src/usb0_in_ep/: data.rs  epno.rs  ev_enable.rs  ev_pending.rs  ev_status.rs  have.rs  idle.rs  pend.rs  pid.rs  reset.rs  stall.rs
luna/lunasoc-pac/src/usb0_out_ep/: address.rs  data.rs  data_ep.rs  enable.rs  epno.rs  ev_enable.rs  ev_pending.rs  ev_status.rs  have.rs  pend.rs  pid.rs  prime.rs  reset.rs  stall.rs
luna/lunasoc-pac/src/usb0_setup/: address.rs  data.rs  epno.rs  ev_enable.rs  have.rs  pend.rs  reset.rs
luna/lunasoc-pac/svd/: lunasoc.svd
luna/lunasoc/examples/: eptri.c  timer.c
luna/lunasoc/generate/: genrust.py  gensvd.py  introspect.py
luna/lunasoc/verilog/: Makefile  README.md  VexRiscv_IMACDcache.v  VexRiscv_IMACNoDcache.v
luna/lunasoc/verilog/vexriscv/: pythondata_cpu_vexriscv.patch  vexriscv_cynthion.v  vexriscv_imac+dcache.v  vexriscv_imac.v
(+16 files in other folders)
