[package]
name = "cynthion"
version = "0.1.0"
authors = ["Antoine van Gelder <antoine@greatscottgadgets.com>"]
license-file = "LICENSE.txt"
categories = ["embedded", "hardware-support", "no-std"]
description = "Support library and firmware for the Great Scott Gadgets Cynthion USB Multitool"
edition = "2021"
rust-version = "1.68"
default-run = "firmware"

[package.metadata.docs.rs]
default-target = "riscv32i-unknown-none-elf"
targets = [
    "riscv32i-unknown-none-elf",
]

# - features ------------------------------------------------------------------

[features]
default = [
    "lunasoc-pac/rt"
]

# - dependencies --------------------------------------------------------------

[dependencies]
libgreat = { path = "../libgreat", features = [] }
lunasoc-pac = { path = "../lunasoc-pac", features = ["critical-section", "rt"]}
lunasoc-hal = { path = "../lunasoc-hal", features = []}

riscv = { version = "=0.10.1", features = ["critical-section-single-hart"] }
riscv-rt = { version = "=0.11.0" }

#atomic-polyfill = "=1.0.1"
heapless = { version = "=0.7.16", default-features = false, features = ["mpmc_large"] } # TODO 0.8.0 is en-route
zerocopy = { version = "=0.7.0-alpha.2", default-features = false }

# https://github.com/rust-lang/log/issues/526
log = "=0.4.17"
#log = { path = "../toolchain/log.git" }
#critical-section = "=1.1.1"

# - binaries ------------------------------------------------------------------

[[bin]]
name = "benchmark"
required-features = ["lunasoc-pac/rt"]

[[bin]]
name = "benchmark-mutex"
required-features = ["lunasoc-pac/rt"]

[[bin]]
name = "cdc-serial-loopback"
required-features = ["lunasoc-pac/rt"]

[[bin]]
name = "firmware"
required-features = ["lunasoc-pac/rt"]

[[bin]]
name = "hello"
required-features = ["lunasoc-pac/rt"]

[[bin]]
name = "usb"
required-features = ["lunasoc-pac/rt"]
