[package]
name = "lunasoc-firmware"
version = "0.1.0"
authors = ["Antoine van Gelder <antoine@greatscottgadgets.com>"]
license-file = "LICENSE.txt"
categories = ["embedded", "hardware-support", "no-std"]
description = "Firmware for the Great Scott Gadgets Luna USB Multitool"
edition = "2021"
rust-version = "1.59"
default-run = "firmware"

[package.metadata.docs.rs]
default-target = "riscv32im-unknown-none-elf"
targets = [
    "riscv32im-unknown-none-elf",
]

# - features ------------------------------------------------------------------

[features]
default = [
    "lunasoc-pac/rt"
]

# - dependencies --------------------------------------------------------------

[dependencies]
libgreat = { path = "../libgreat", features = [] }
lunasoc-pac = { path = "../lunasoc-pac", features = ["critical-section", "rt"]}
lunasoc-hal = { path = "../lunasoc-hal", features = []}
panic-halt = "0.2.0"
riscv = { version = "=0.10.1", features = ["critical-section-single-hart"] }
riscv-rt = { version = "=0.11.0" }

# https://github.com/rust-lang/log/issues/526
#log = "=0.4.17"
log = { path = "../toolchain/log.git" }


# - binaries ------------------------------------------------------------------

[[bin]]
name = "blinky_pac"
required-features = ["lunasoc-pac/rt"]

[[bin]]
name = "firmware"
required-features = ["lunasoc-pac/rt"]

[[bin]]
name = "hello"
required-features = ["lunasoc-pac/rt"]

[[bin]]
name = "interrupts"
required-features = ["lunasoc-pac/rt"]

[[bin]]
name = "interrupts_pac"
required-features = ["lunasoc-pac/rt"]

[[bin]]
name = "log"
required-features = ["lunasoc-pac/rt"]

[[bin]]
name = "uart_pac"
required-features = ["lunasoc-pac/rt"]

[[bin]]
name = "usb"
required-features = ["lunasoc-pac/rt"]
