[package]
name = "lunasoc-hal"
version = "0.0.1"
authors = ["Antoine van Gelder <antoine@greatscottgadgets.com>"]
license-file = "LICENSE.txt"
description = "Hardware Abstraction Layer implementation for LunaSoC cores"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["luna", "riscv", "hal", "embedded-hal"]
repository = "https://github.com/greatscottgadgets/libgreat"
documentation = "https://luna.readthedocs.io"
edition = "2021"
rust-version = "1.59"
include = ["examples/**/*", "src/**/*", "README.md", "memory.x"]

[package.metadata.docs.rs]
default-target = "riscv32im-unknown-none-elf"
targets = [
    "riscv32im-unknown-none-elf",
]

[lib]
test = false
bench = false

# - features ------------------------------------------------------------------

[features]
default = []


# - dependencies --------------------------------------------------------------

[dependencies]
atomic-polyfill = "=1.0.1"
embedded-hal = "=1.0.0-alpha.9"
embedded-hal-0 = { package = "embedded-hal", version = "=0.2.7", features = ["unproven"] }
embedded-hal-nb = "=1.0.0-alpha.1"
fugit = "=0.3.6"
heapless = { version = "=0.7.16" } # TODO 0.8.0 is en-route
libgreat = { path = "../libgreat", features = [] }
lunasoc-pac = { path = "../lunasoc-pac", default-features = false }
nb = "=1.0.0"
riscv = { version = "=0.10.1", default-features = false }

# https://github.com/rust-lang/log/issues/526
#log = "=0.4.17"
log = { path = "../toolchain/log.git" }


# - dev-dependencies ----------------------------------------------------------

[dev-dependencies]
libgreat = { path = "../libgreat", features = [] }
lunasoc-pac = { path = "../lunasoc-pac", features = ["critical-section", "rt"]}
panic-halt = "=0.2.0"
riscv = { version = "=0.10.1", features = ["critical-section-single-hart"] }
riscv-rt = { version = "=0.11.0" }


# - examples ------------------------------------------------------------------

[[example]]
name = "blinky"
required-features = ["lunasoc-pac/rt"]

[[example]]
name = "blinky_pac"
required-features = ["lunasoc-pac/rt"]

[[example]]
name = "interrupts"
required-features = ["lunasoc-pac/rt"]

[[example]]
name = "interrupts_pac"
required-features = ["lunasoc-pac/rt"]

[[example]]
name = "uart"
required-features = ["lunasoc-pac/rt"]

[[example]]
name = "uart_pac"
required-features = ["lunasoc-pac/rt"]
