[package]
name = "lunasoc-pac"
version = "0.1.0"
authors = ["Antoine van Gelder <antoine@greatscottgadgets.com>"]
license-file = "LICENSE.txt"
description = "A peripheral access crate for LunaSoC cores"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["luna", "riscv", "register", "peripheral"]
repository = "https://github.com/greatscottgadgets/libgreat"
documentation = "https://luna.readthedocs.io"
edition = "2021"
rust-version = "1.59"
include = ["src/**/*", "README.md", "device.x", "build.rs"]


[dependencies]
riscv = "=0.10.0"
vcell = "=0.1.3"

critical-section = { version = "=1.1.1", optional = true }
riscv-rt = { version = "=0.10.0", optional = true }

[features]
rt = ["riscv-rt"]
